<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geek-Coder-News</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 导航分类 -->
    <string name="headline">头条</string>
    <string name="hotpoint">热点</string>
    <string name="entertainment">娱乐</string>
    <string name="sport">体育</string>
    <string name="technology">科技</string>
    
    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
</resources>
